# cmake_learn

./: .gitignore  README.md
customDemo/: CMakeLists.txt  main.cpp
customDemo/test/: test.cpp
multiDirs/: CMakeLists.txt  main.cpp
multiDirs/test/: CMakeLists.txt  test.cpp
multiFiles/: CMakeLists.txt  main.cpp  test.cpp  test.h
singleFile/: CMakeLists.txt  main.cpp
